--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="action_shuffle_all">Shuffle All</string>
     <string name="action_equalizer">Equalizer</string>
     <string name="search_library">Search Library</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2075571365285827/5526134326</string>
 
     <string name="select_theme">Select Theme</string>
     <string name="choose_theme_throughout">Choose a theme to be used throughout the app.</string>
